assets/css/menu.css
/* -------------- *
 * General
 * -------------- */
* {
    margin: 0;
    padding: 0;
}
  
html {
    scroll-behavior: smooth;
}
  
body {
    overscroll-behavior: none;
    max-width: 1200px;
    justify-content: center;
    margin: auto;
    background-color: #f8f9fa;
}

/* -------------- *
 * Nav Bar
 * -------------- */
.navbar {
    padding-top: 10px;
    padding-bottom: 10px;
    border-bottom: 1px solid grey;
}

.navbar-nav .nav-link {
    border-radius: 10px;
    padding: 8px 20px;
    font-size: 1.25rem;
    border: 2px solid transparent;
}

.navbar-nav .nav-link:hover {
    border: 2px solid grey;
    color: #333;
    cursor: pointer;
}

.navbar-nav .nav-item {
    margin-right: 10px;
}

.navbar-nav .nav-item:last-child {
    margin-right: 0;
}

.navbar-collapse {
    overflow-x: auto;
    white-space: nowrap;
}

.navbar-collapse::-webkit-scrollbar {
    display: none;
}

.navbar-nav .nav-link.active {
    background-color: #E0E0E0;
}

/* -------------- *
 * Search
 * -------------- */
.search-container {
    position: relative;
    margin-right: 10px;
}

.search-input {
    width: 0;
    height: 50px;
    padding: 0 20px;
    border-radius: 10px;
    border: 2px solid grey;
    transition: width 0.4s ease, opacity 0.4s ease;
    opacity: 0;
    pointer-events: none;
    font-size: 1.25rem;
}

.search-container.active .search-input {
    width: 200px;
    opacity: 1;
    pointer-events: auto;
    padding-left: 40px;
    padding-right: 10px;
}

.search-input:focus {
    outline: none;
}

.search-icon {
    color: rgba(0, 0, 0, 0.5);
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    cursor: pointer;
}

.search-icon i {
    padding: 12.5px;
    border-radius: 10px;
    border: 2px solid transparent;
    font-size: 1.25rem;
}

.search-icon i:hover {
    border: 2px solid grey;
    color: #333;
}

.search-container.active:hover .search-icon i:hover {
    border: 2px solid transparent;
}

/* -------------- *
 * Categories
 * -------------- */
.container {
    width: fit-content;
    margin-left: auto;
    justify-content: center;
}

.category h2 {
    font-weight: bold;
    color: #333;
    text-transform: capitalize;
}

.card {
    display: flex;
    flex-direction: row;
    border: 1px solid #ddd;
    border-radius: 5px;
    height: 175px;
    overflow: hidden;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
    cursor: pointer;
}

.card:hover {
    transform: scale(1.01);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.card-img {
    width: 33.3%;
    height: 100%;
    border-right: 1px solid #ddd;
}

.card-body {
    padding: 15px;
    flex-grow: 1;
    overflow: hidden;
}

.card-title {
    font-size: 1.2rem;
    font-weight: bold;
}

.card-text {
    font-size: 0.9rem;
}

.col-md-6 {
    padding: 10px;
    max-width: 450px;
}

@media (max-width: 991.98px) {
    .card {
        height: 150px;
    }
}

@media (max-width: 767.98px) {
    .row {
        width: 450px;
    }
}

/* -------------- *
 * Footer
 * -------------- */
.footer {
    padding: 20px;
}

/* -------------- *
 * Nav Bar Wide
 * -------------- */
@media (min-width: 1200px) {
    .navbar {
        position: fixed;
        align-items: flex-start;
        width: 230px;
        height: 100%;
        padding: 10px 0px;
        overflow-y: auto;
    }

    .navbar::-webkit-scrollbar {
        display: none;
    }

    .navbar-expand .navbar-collapse {
        display: block !important;
    }

    .navbar-expand .navbar-nav {
        flex-direction: column;
    }

    .navbar-nav .nav-item {
        margin-right: 0px;
    }

    .navbar-expand .navbar-nav .nav-link {
        padding: 8px 20px;
    }

    .navbar-expand .container-fluid {
        padding: 0px 16px;
        flex-wrap: wrap;
    }
      
    .container {
        margin-left: 255px;
    }

    .search-container {
        margin-right: 0px;
        margin-bottom: 10px;
        pointer-events: none;
    }

    .search-input {
        padding-left: 40px;
        padding-right: 10px;
    }

    .search-container .search-input, .search-container.active .search-input {
        width: 200px;
        opacity: 1;
        pointer-events: auto;
        transition: none;
    }
}

